auto-test/tests/chapter_18/invalid_types/extra_credit/incompatible_union_types/return_type_mismatch.c
union u {
    int x;
};

union u return_union(void){
    
    union u {
        int x;
    };

    union u result = {10};

    
    return result;
}
